--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -55,7 +55,7 @@ Like most of our there, we are not design experts, but that doesn't mean you can
 <h4><a href="tutorial3/tutorial3.html">Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
 The Mobile SDK currently provides Objective-C based template projects. This tutorial shows you how to take these template projects, show you how to handle authentication, and quickly make them Swift and Storyboard ready.
 
-<h4><a href="designing-with-storyboards/designing-with-storyboards.html">Take Your Designs and add to Xcode</a></h4>
+<h4><a href="designing-with-storyboards/designing-with-storyboards.html">Adding Your Designs To Xcode</a></h4>
 In our last design tutorial, we will take the artboards and add them to Xcode. This tutorial will provide a brief introduction to storyboards, seques, and handling tap gestures. 
 
 <h3><i>Introduction to iOS</i></h3>
