--- a/index.html
+++ b/index.html
@@ -2,34 +2,46 @@
 <html>
 
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Quinton Wall : ">
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheets/docs.min.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <!-- 
+      using this for better syntax highlighting
+      http://demo.stanleyhlng.com/prettify-js/?id=bootstrap-light
+    -->
+    <link href="stylesheets/prettify.css" rel="stylesheet">
+
+<style type="text/css">
+.btn {
+      background:transparent;
+      border-color: white;
+    }
+  </style>
     <title>Quinton Wall</title>
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/quintonwall">View on GitHub</a>
-
-          <h1 id="project_title">Quinton Wall</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
+<div class="bs-docs-header" id="content" tabindex="-1">
+     <div class="container">
+     <h1>Quinton Wall</h1>
+       <p>Modern day wandering minstrel &amp; code gypsy</p>
+       <a href="https://twitter.com/share" class="btn btn-primary" data-via="quintonwall">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<a href="https://twitter.com/quintonwall" class="btn btn-primary" data-show-count="false">Follow @quintonwall</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
+  </div>
+  <div class="well row" style="background-color:white;">
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
+  <p><span class="glyphicon glyphicon-lock" aria-hidden="true"/><a href="enterprise-ios/index.html"> Build Enterprise iOS Apps With Salesforce</a></p>
+  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="add-mobilesdk-to-project/index.html"> Add The Salesforce Mobile SDK to Existing iOS Apps</p>
 
-<p>Hello</p>
+  </div>
+  </div>
+
+
 
 
    
