added watchos2 tutorial

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 
 
-    <!-- 
+    <!--
       using this for better syntax highlighting
       http://demo.stanleyhlng.com/prettify-js/?id=bootstrap-light
     -->
@@ -37,6 +37,7 @@
 
   <p><span class="glyphicon glyphicon-lock" aria-hidden="true"/><a href="enterprise-ios/index.html"> Build Enterprise iOS Apps With Salesforce</a></p>
   <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="add-mobilesdk-to-project/index.html"> Add The Salesforce Mobile SDK to Existing iOS Apps</p>
+  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="watchos2-communication/index.html">Use WatchOS2 to communicate between iPhone and Apple Watch</p>
 
   </div>
   </div>
@@ -44,7 +45,7 @@
 
 
 
-   
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
