--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <div class="well row" style="background-color:white;">
 
   <p><span class="glyphicon glyphicon-lock" aria-hidden="true"/><a href="enterprise-ios/index.html"> Build Enterprise iOS Apps With Salesforce</a></p>
-  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="add-mobilesdk-to-project/index.html"> Add The Salesforce Mobile SDK to Existing iOS Apps</p>
-  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="watchos2-communication/index.html">Use WatchOS2 to communicate between iPhone and Apple Watch</p> 
+  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="add-mobilesdk-to-project/index.html"> Add The Salesforce Mobile SDK to Existing iOS Apps</a></p>
+  <p><span class="glyphicon glyphicon-th-large" aria-hidden="true"/><a href="watchos2-communication/index.html">Use WatchOS2 to communicate between iPhone and Apple Watch</a></p>
 
   </div>
   </div>
