--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -60,7 +60,7 @@ In our last design tutorial, we will take the artboards and add them to Xcode. T
 
 <h3><i>Introduction to iOS</i></h3>
 
-<h4>Learning Swift</h4>
+<h4><a href="intro-to-swift/intro-swift.html">Learning Swift</a></h4> 
 Swift, Apple's new development language is incredibly easy to use. This tutorial will introduce you to XCode, the Apple Developer IDE, and use the Playground feature to teach you the basics of Swift.
 
 <h4>Intro to Storyboards, UI and Controllers</h4>
