--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -61,7 +61,7 @@ In our last design tutorial, we will take the artboards and add them to Xcode. T
 <h3><i>Introduction to iOS</i></h3>
 
 <h4><a href="intro-to-swift/intro-swift.html">Learning Swift</a></h4> 
-Swift, Apple's new development language is incredibly easy to use. This tutorial will introduce you to XCode, the Apple Developer IDE, and use the Playground feature to teach you the basics of Swift.
+Swift, Apple's new development language is incredibly easy to use. This tutorial will introduce you to XCode, the Apple Developer IDE, and use the Playground feature to teach you the basics of Swift 2.
 
 <h4>Intro to Storyboards, UI and Controllers</h4>
 With a basic understanding of Swift under our belt, this tutorial will introduce you to the UI controls and framework within XCode. 
