added linked to watch dev pack

--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -92,7 +92,7 @@ It's time to put all of your hard work out there for the world to see. This tuto
 
 <h3><i>iOS Everywhere!</i></h3>
 
-<h4>Adding WatchKit</h4>
+<h4><a href="https://github.com/developerforce/SalesforceWear-DevPack-For-AppleWatch">Adding WatchKit</a></h4>
 WatchKit, the latest addition to the developer toolbelt, offers some unique value props for enterprise efficiency. This tutorial will show you how to connect the Mobile SDK and WatchKit for a killer enterprise app.
 
 <h4>Adding HealthKit</h4>
