updated info re use_frameworks

--- a/add-mobilesdk-to-project/index.html
+++ b/add-mobilesdk-to-project/index.html
@@ -185,6 +185,16 @@ the Mobile SDK 4.0 release is planned to support the use_frameworks directive. <
             [unowned self] (fromUser: SFUserAccount?, toUser: SFUserAccount?) -> () in
             self.handleUserSwitch(fromUser, toUser: toUser)
         }
+
+        func handleSdkManagerLogout()
+        {
+          //todo
+        }
+
+        func handleUserSwitch(fromUser: SFUserAccount?, toUser: SFUserAccount?)
+        {
+          //todo
+        }
       </pre>
 
     </div>
