fixed wrong image

--- a/check-for-loggedin/index.html
+++ b/check-for-loggedin/index.html
@@ -104,7 +104,7 @@
     The last thing that you need to you is configure your newly created segue with the identifier "login". This is the label that we configured in performSegueWithIdentifier code. It tells iOS which segue to follow.
     In our case, we only have one segue, but as you build our your app, adding identifiers to your segues helps with maintenance.
   </p>
-  <img class="media-object media-middle" src="images/CreateSegue.gif" />
+  <img class="media-object media-middle" src="images/setIdentifierName.gif" />
 
   <h2>And, you're done!</h2>
   <p>
