--- a/check-for-loggedin/index.html
+++ b/check-for-loggedin/index.html
@@ -110,164 +110,12 @@
   <p>
     That's it. We now have a very easy way to protect our views in iOS apps. Running your app in the simulator will automatically transition to the login view.</p>
   </p>
-  <img class="media-object media-middle" src="images/showApp.gif" />
+  <center>
+    <img class="media-object media-middle" src="images/showApp.gif" />
+ </center>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-  <div class="panel panel-primary">
-    <div class="panel-heading">If you already have a Podfile</div>
-    <div class="panel-body">
-      Add the following line:
-      <pre class="prettyprint lang-html">
-        pod 'SalesforceMobileSDK-iOS'
-      </pre>
-      Then run:
-      <pre class="prettyprint lang-html">
-        $ pod install
-      </pre>
-
-    </div>
-  </div>
-  <div class="alert alert-warning" role="alert">The Mobile SDK uses static libraries. This means you can not link via the use_frameworks! directive.
-  The pod install command will work, but build time errors such as missing SFLogger.h files will be raised. Good news is that
-the Mobile SDK 4.0 release is planned to support the use_frameworks directive. </div>
-
-
-   <div class="panel panel-primary">
-    <div class="panel-heading">If you don't have a Podfile</div>
-    <div class="panel-body">
-      Change directories, via the command line to your Xcode project home, run:
-      <pre class="prettyprint lang-html">
-        $ pod echo "pod 'SalesforceMobileSDK-iOS'" > Podfile
-        $ pod install
-      </pre>
-
-      <p>Once completed, your Xcode project will have created a workspace file, and have the Mobile SDK libraries ready to go. From now on, use the *.xcworkspace file, and not the *.xcodeproj file.</p>
-      </div>
-  </div>
-
-  <h2>3. Add the Bridging Header</h2>
-  The Mobile SDK is currently written in Objective-C. In order to access the libraries from Swift, we need to add a bridging header.
-  <ol>
-  <li>Create a new header (.h) file in the root of your project, and call it [projectname]-BridgingHeader.h (Avoid adding any spaces in the name. If you do, Xcode changes those to an underscore whenever you need to reference them in your app.)
-  <li> In your project build settings, search for Swift Compiler – Code Generation, and next to Objective-C Bridging Header add the name of the file you just created.
-  </ol>
-
-  <p>Now that you have your bridging header file created, add the following code:</p>
-<pre class="prettyprint lang-html">
-
-
-        #import &lt;SalesforceCommonUtils/SFLogger.h&gt;
-        #import &lt;SalesforceSDKCore/SFUserAccountManager.h&gt;
-        #import &lt;SalesforceSDKCore/SalesforceSDKManager.h&gt;
-        #import &lt;SalesforceSDKCore/SFAuthenticationManager.h&gt;
-        #import &lt;SalesforceSDKCore/SFPushNotificationManager.h&gt;
-        #import &lt;SalesforceSDKCore/SFDefaultUserManagementViewController.h&gt;
-        #import &lt;SalesforceRestAPI/SFRestAPI.h&gt;
-        #import &lt;SalesforceRestAPI/SFRestAPISalesforceAction.h&gt;
-        #import &lt;SalesforceRestAPI/SFRestAPI+Blocks.h&gt;
-        #import &lt;SalesforceRestAPI/SFRestAPI+Files.h&gt;
-        #import &lt;SalesforceOAuth/SFOAuthInfo.h&gt;
-      </pre>
-
-  <h2>4. Configure your AppDelegate</h2>
-  Now we have our project all configured, we need to update the AppDelgate to initialize the Mobile SDK.
-
-  <div class="panel panel-primary">
-
-    <div class="panel-body">
-      Add the following code above your class definition:
-      <pre class="prettyprint lang-html">
-        let RemoteAccessConsumerKey = "your-connected-app-consumer-key";
-        let OAuthRedirectURI        = "your-connected-app-redirect-uri";
-        let scopes = ["api"];
-      </pre>
-      Then add the following code into your init method:
-      <pre class="prettyprint">
-        SFLogger.setLogLevel(SFLogLevelDebug)
-
-        SalesforceSDKManager.sharedManager().connectedAppId = RemoteAccessConsumerKey
-        SalesforceSDKManager.sharedManager().connectedAppCallbackUri = OAuthRedirectURI
-        SalesforceSDKManager.sharedManager().authScopes = scopes
-        SalesforceSDKManager.sharedManager().postLaunchAction = {
-            [unowned self] (launchActionList: SFSDKLaunchAction) in
-            let launchActionString = SalesforceSDKManager.launchActionsStringRepresentation(launchActionList)
-            self.log(SFLogLevelInfo, msg:"Post-launch: launch actions taken: \(launchActionString)");
-
-        }
-        SalesforceSDKManager.sharedManager().launchErrorAction = {
-            [unowned self] (error: NSError?, launchActionList: SFSDKLaunchAction) in
-            if let actualError = error {
-                self.log(SFLogLevelError, msg:"Error during SDK launch: \(actualError.localizedDescription)")
-            } else {
-                self.log(SFLogLevelError, msg:"Unknown error during SDK launch.")
-            }
-        }
-        SalesforceSDKManager.sharedManager().postLogoutAction = {
-            [unowned self] in
-            self.handleSdkManagerLogout()
-        }
-        SalesforceSDKManager.sharedManager().switchUserAction = {
-            [unowned self] (fromUser: SFUserAccount?, toUser: SFUserAccount?) -> () in
-            self.handleUserSwitch(fromUser, toUser: toUser)
-        }
-
-        func handleSdkManagerLogout()
-        {
-          //todo: add segues from each page to logout to send back to login view
-          self.performSegueWithIdentifier("logout", sender: nil)
-        }
-
-        func handleUserSwitch(fromUser: SFUserAccount?, toUser: SFUserAccount?)
-        {
-          //todo
-        }
-      </pre>
-
-    </div>
-  </div>
-
-  <h2>5. Handle Salesforce Login</h2>
-  The last thing that we need to do is handle the salesforce login: display the login screen, and then accept the response. Most apps have some sort of welcome screen where a user can tap to login before being redirected to the app home. You probably have a storyboard that looks similar to mine below. When a user taps the connect to Salesforce button (on the ViewController labeled 1), we want to to perform the segue to Home (ViewController labeled 2).
-  <img class="media-object media-middle" src="images/storyboardNums.png" />
-   Within ViewController 1, and once you have wired up the appropriate outlets and actions to handle button taps, and added a seque to ViewController 2 (in my instance I gave it the identifier "loggedIn") add the following line of code to kick off the Salesforce authentication flow into your connectTapped function.
-   <pre class="prettyprint lang-html">
-        SalesforceSDKManager.sharedManager().launch()
-    </pre>
-    Then, to handle to end of the authentication flow, specify that your View Controller is a delegate for the MobileSDK:
-    <pre class="prettyprint">
-     class MyViewController: UIViewController, SFAuthenticationManagerDelegate
-    </pre>
-    and implement the Delegate's authManagerDidFinish function. I typically check if the username has been populated correctly. If it has, only then do I perform the segue to my HomeController.
-    <div class="alert alert-warning" role="alert">The SFAuthenticationManagerDelegate does include a didAuthenticate function which is technically the correct place to perform a check for successful login, however I have found that this method gets called prior to the SDK performing a remove view for the Salesforce login screen. The result is that our newly displayed Home ViewController is removed. :(</div>
-
-     Within the viewDidLoad method, register this controller as a delegate.
-    <pre class="prettyprint">
-      SFAuthenticationManager.sharedManager().addDelegate(self)
-  </pre>
-<pre class="prettyprint">
-    func authManagerDidFinish(manager: SFAuthenticationManager!, info: SFOAuthInfo!) {
-
-     if !SFUserAccountManager.sharedInstance().currentUser.userName.isEmpty {
-         //call the segue with the name you give it in the storyboard editor
-         self.performSegueWithIdentifier("loggedIn", sender: nil)
-        }
-    }
-    </pre>
-
-    <h2>Summary</h2>
-    That's it. Your app now has the Salesforce Mobile SDK for iOS configured, and you have a pretty nifty little login button/flow to go with it. The code I used throughout this tutorial is from a project that I am actively working on. I made a <a href="https://github.com/quintonwall/opt/tree/Basic-App-with-Auth">branch of it with just the config and code</a> I used here.
 
 
 </div>
